# Neural_Network_Bayesian_Calibration

./: .gitignore  LICENSE  Makefile  README.md  generate_noisy_experiment.py  noisy_xp.npy  pyproject.toml  to_do_list.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-chopin-pendulum-exploration.ipynb  Rejection_Sampler_Bechnmark.ipynb  Rejection_Sampler_Benchmark.ipynb  test_import.py
notebooks/script/: Rejection_Sampler_Bechnmark.py
physics_simulator/: pendulum.py
samplers/: rejection_sampler.py
