[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bayesian_calibration"
version = "0.0.1"
description = "This is a project showing Neural Network utility in bayesian calibration"
authors = [
  { name = "Fabien Chopin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "jupyter",
    "matplotlib",
    "mkdocs",
    "nbautoexport",
    "numpy",
    "pip",
    "pytest",
    "python-dotenv",
    "scipy",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["bayesian_calibration"]
force_sort_within_sections = true


